<resources>
    <string name="app_name">Message Display</string>

    <string name="title_activity_display_message">Displaying the message</string>
    <string name="empty_message">Empty message !</string>
    <string name="title_need_permissions">Permissions needed</string>
    <string name="message_need_permissions">In order to share the image, you must grant the permission to access to your device storage. Don\'t worry, this permission is only used to share and save images on the disk</string>
    <string name="send_with">Send with</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="instructions_text_size">Set the text size</string>
    <string name="all_caps">All CAPS ?</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="dummy_content">Dummy content</string>
    <string name="share">Share</string>
    <string name="save_after_sharing">Save after sharing ?</string>
    <string name="summ_save_after_sharing">Determine if the image will saved or not when shared</string>

    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_deep_purple">Deep purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="color_light_blue">Light Blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_light_green">Light Green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_amber">Amber</string>
    <string name="color_orange">Orange</string>
    <string name="color_deep_orange">Deep orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_grey">Grey</string>
    <string name="color_blue_grey">Blue Grey</string>
    <string name="color_black">Black</string>
    <string name="instruction_choose_background_color">And finally, choose a background color for your message
        !</string>
    <string name="color_white">White</string>
    <string name="instructions_text_color">Choose the text color</string>
    <string name="ok">OK</string>

</resources>
