<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_weight="50"
            android:hint="@string/type_your_message_here"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="hideKeyboard"
            android:text="@string/ok"
            android:textColor="@color/white"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:text="@string/instructions_text_size"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0sp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <SeekBar
            android:id="@+id/text_size_seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:max="60"
            android:progress="30"
            />

        <CheckBox
            android:id="@+id/all_caps_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_caps"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:text="@string/instructions_text_color"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <RadioGroup
        android:id="@+id/text_color_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/text_color_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:checked="true"
            android:text="@string/color_white"
            />

        <RadioButton
            android:id="@+id/text_color_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/color_black"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:text="@string/instruction_choose_background_color"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <GridView
        android:id="@+id/grid_colours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:numColumns="3"/>


</LinearLayout>
